# horizon-firehose

./: .dockerignore  .gitignore  Cargo.toml  DEPLOYMENT.md  DESIGN.md  Dockerfile  README.md  RETROSPECTIVE.md  config.example.toml
.cargo/: config.toml
.claude/: settings.local.json  settings.local.json.bak
.github/: expected-proto-blue-sha.txt  verify-proto-blue-sha.sh
.github/upstream-issues/: proto-blue-repo-varint-overflow.md  proto-blue-ws-websocketconfig.md
.github/workflows/: ci.yml
examples/: docker-compose.yml
src/: backend.rs  config.rs  cursor.rs  decoder.rs  error.rs  event.rs  golden_test.rs  main.rs  metrics.rs  pipeline_main_test.rs  pipeline_test.rs  publisher.rs  router.rs  ws_reader.rs
tests/fixtures/: manifest.json
tests/golden/: REGENERATE.md
tests/golden/expected/: .gitkeep
tests/golden/fixtures/: .gitkeep
