[package]
name = "horizon-firehose"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Chrysanthemum Heart <chrys@chrysanthemum.dev>"]
description = "A Rust-based ATProto firehose consumer with CBOR/CAR decoding, per-relay failover, and Redis stream publishing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/skydeval/horizon-firehose"
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config loading (TOML + env var overrides)
figment = { version = "0.10", features = ["toml", "env"] }

# Redis client. `streams` pulls in XADD/XLEN helpers; `connection-manager`
# gives us auto-reconnecting pooled connections so we don't have to hand-roll
# reconnect logic on top of `MultiplexedConnection`.
redis = { version = "0.27", features = ["tokio-comp", "aio", "streams", "connection-manager"] }

# Error handling
thiserror = "2"

# Base64 encoding for cursor keys
base64 = "0.22"

# CLI argument parsing for the capture-fixtures binary.
clap = { version = "4", features = ["derive"] }

# ISO 8601 timestamps for capture manifests (and the event JSON in
# Phase 3). Default features include `clock` for `Utc::now()`.
chrono = "0.4"

# TLS — actual handshake is done by `tokio-tungstenite`'s `native-tls`
# feature, pulled in transitively through `proto-blue-ws`. We had
# `rustls` + `rustls-native-certs` here earlier when the plan was
# rustls-with-system-roots, but proto-blue-ws uses
# `tokio_tungstenite::connect_async` (no `ClientConfig` hook) so the
# rustls deps were never wired in. See DESIGN.md §3 "TLS verification"
# and proto-blue#4 for the upstream feature that would flip this back
# to rustls.

# proto-blue (pinned to commit SHA — see "Working with proto-blue" in README)
proto-blue-api = { git = "https://github.com/dollspace-gay/proto-blue", rev = "c8acc1baa3017a205cc420cf58a4c5be8673fd39" }
proto-blue-ws = { git = "https://github.com/dollspace-gay/proto-blue", rev = "c8acc1baa3017a205cc420cf58a4c5be8673fd39" }
proto-blue-lex-cbor = { git = "https://github.com/dollspace-gay/proto-blue", rev = "c8acc1baa3017a205cc420cf58a4c5be8673fd39" }
proto-blue-lex-data = { git = "https://github.com/dollspace-gay/proto-blue", rev = "c8acc1baa3017a205cc420cf58a4c5be8673fd39" }
proto-blue-repo = { git = "https://github.com/dollspace-gay/proto-blue", rev = "c8acc1baa3017a205cc420cf58a4c5be8673fd39" }
proto-blue-syntax = { git = "https://github.com/dollspace-gay/proto-blue", rev = "c8acc1baa3017a205cc420cf58a4c5be8673fd39" }

# FutureExt::catch_unwind for the spawn_instrumented helper
# (Phase 8.5 finding 2.1). Already in the tree as a transitive dep
# via proto-blue-ws / tokio-tungstenite; making the dep explicit so
# this crate can rely on the `std` + `async-await` features.
futures-util = "0.3"

[dev-dependencies]
# Testing
tokio-test = "0.4"

# Property-based testing
proptest = "1"

# `Jail` (sandboxed env + cwd for config tests) is gated behind figment's `test` feature.
figment = { version = "0.10", features = ["toml", "env", "test"] }

# Mock WebSocket server for ws_reader tests. Pinned to the same minor as the
# version proto-blue-ws transitively pulls in, so they unify in the lockfile.
tokio-tungstenite = "0.26"
futures-util = "0.3"

# In-memory Redis for tests
# (we'll figure out the right crate during phase 4 — options: `redis-test`, `mini-redis`, or a Docker harness)

[[bin]]
name = "horizon-firehose"
path = "src/main.rs"

[[bin]]
name = "capture-fixtures"
path = "src/bin/capture-fixtures.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Faster incremental builds during development
opt-level = 0
debug = true

# Temporary override: pins proto-blue to a fork with the
# WebSocketTransport: Send + Sync trait supertrait fix.
# Upstream PR filed at https://github.com/dollspace-gay/proto-blue/pull/5
# Remove this [patch] block once upstream merges and we bump the pinned rev.
[patch."https://github.com/dollspace-gay/proto-blue"]
proto-blue-api = { git = "https://github.com/skydeval/proto-blue", branch = "fix-websockettransport-sync-supertrait" }
proto-blue-ws = { git = "https://github.com/skydeval/proto-blue", branch = "fix-websockettransport-sync-supertrait" }
proto-blue-lex-cbor = { git = "https://github.com/skydeval/proto-blue", branch = "fix-websockettransport-sync-supertrait" }
proto-blue-lex-data = { git = "https://github.com/skydeval/proto-blue", branch = "fix-websockettransport-sync-supertrait" }
proto-blue-repo = { git = "https://github.com/skydeval/proto-blue", branch = "fix-websockettransport-sync-supertrait" }
proto-blue-syntax = { git = "https://github.com/skydeval/proto-blue", branch = "fix-websockettransport-sync-supertrait" }