[package]
name = "horizon-firehose"
version = "0.1.0"
edition = "2024"
# MSRV: proto-blue (0.2.5, c8acc1ba) uses stabilised-in-1.88 `let`
# chains in `proto-blue-lexicon/src/validation.rs`. Building with
# anything older produces E0658 ("`let` expressions in this position
# are unstable") on the proto-blue crates. If we ever vendor or fork
# proto-blue to support an older MSRV, this bound can come back down.
rust-version = "1.88"
authors = ["Chrysanthemum Heart <chrys@chrysanthemum.dev>"]
description = "A Rust-based ATProto firehose consumer with CBOR/CAR decoding, per-relay failover, and Redis stream publishing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/skydeval/horizon-firehose"
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config loading (TOML + env var overrides)
figment = { version = "0.10", features = ["toml", "env"] }

# Redis client. `streams` pulls in XADD/XLEN helpers; `connection-manager`
# gives us auto-reconnecting pooled connections so we don't have to hand-roll
# reconnect logic on top of `MultiplexedConnection`.
redis = { version = "0.27", features = ["tokio-comp", "aio", "streams", "connection-manager"] }

# Error handling
thiserror = "2"

# Base64 encoding for cursor keys
base64 = "0.22"

# CLI argument parsing for the capture-fixtures binary.
clap = { version = "4", features = ["derive"] }

# ISO 8601 timestamps for capture manifests (and the event JSON in
# Phase 3). Default features include `clock` for `Utc::now()`.
chrono = "0.4"

# TLS. proto-blue-ws's default `tungstenite` feature uses `native-tls`
# for the TLS handshake (system trust store: OpenSSL on Linux,
# SChannel on Windows, Security.framework on macOS). That's the path
# every connect takes when `relay.tls_extra_ca_file` is empty —
# zero rustls in the cert-path for the common case.
#
# Enabling `rustls-tls` activates an additional code path: when we
# hand `TungsteniteConnector::with_rustls_config` a caller-built
# `rustls::ClientConfig`, the connector routes that connection
# through `connect_async_tls_with_config(Connector::Rustls(...))`
# instead. Native-tls stays in the build as the no-config default.
#
# We opt in so `tls_extra_ca_file` can load additional CA bundles
# additive to system roots (DESIGN.md §3 "TLS verification"). The
# rustls stack is ring-only to match proto-blue-ws's transitive pin.

# proto-blue (pinned to commit SHA — see "Working with proto-blue" in README)
proto-blue-api = { git = "https://github.com/dollspace-gay/proto-blue", rev = "27fd59a26f322484d29da75ca3588013a4bed734" }
proto-blue-ws = { git = "https://github.com/dollspace-gay/proto-blue", rev = "27fd59a26f322484d29da75ca3588013a4bed734", features = ["rustls-tls"] }
proto-blue-lex-cbor = { git = "https://github.com/dollspace-gay/proto-blue", rev = "27fd59a26f322484d29da75ca3588013a4bed734" }
proto-blue-lex-data = { git = "https://github.com/dollspace-gay/proto-blue", rev = "27fd59a26f322484d29da75ca3588013a4bed734" }
proto-blue-repo = { git = "https://github.com/dollspace-gay/proto-blue", rev = "27fd59a26f322484d29da75ca3588013a4bed734" }
proto-blue-syntax = { git = "https://github.com/dollspace-gay/proto-blue", rev = "27fd59a26f322484d29da75ca3588013a4bed734" }

# Rustls client (with ring backend to match proto-blue-ws's transitive
# pin — feature unification keeps only one provider in the build).
# We use it to construct a `ClientConfig` with system + custom CA
# roots and hand the Arc to `TungsteniteConnector::with_rustls_config`.
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Load the OS trust store so custom CAs are *additive* to system
# roots, not a replacement. 0.8 returns `CertificateResult { certs,
# errors }` which lets us surface per-cert load failures without
# refusing the whole startup.
rustls-native-certs = "0.8"

# PEM parser for user-supplied CA bundles.
rustls-pemfile = "2"

# FutureExt::catch_unwind for the spawn_instrumented helper
# (Phase 8.5 finding 2.1). Already in the tree as a transitive dep
# via proto-blue-ws / tokio-tungstenite; making the dep explicit so
# this crate can rely on the `std` + `async-await` features.
futures-util = "0.3"

[dev-dependencies]
# Testing
tokio-test = "0.4"

# Property-based testing
proptest = "1"

# `Jail` (sandboxed env + cwd for config tests) is gated behind figment's `test` feature.
figment = { version = "0.10", features = ["toml", "env", "test"] }

# Mock WebSocket server for ws_reader tests. Pinned to the same minor as the
# version proto-blue-ws transitively pulls in, so they unify in the lockfile.
tokio-tungstenite = "0.26"
futures-util = "0.3"

# Scratch files for TLS-config tests (PEM loader paths).
tempfile = "3"

# In-memory Redis for tests
# (we'll figure out the right crate during phase 4 — options: `redis-test`, `mini-redis`, or a Docker harness)

[[bin]]
name = "horizon-firehose"
path = "src/main.rs"

[[bin]]
name = "capture-fixtures"
path = "src/bin/capture-fixtures.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Faster incremental builds during development
opt-level = 0
debug = true
